Fixed gap between widget

--- a/iframe-styles.css
+++ b/iframe-styles.css
@@ -72,7 +72,7 @@ body {
 .widgets-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(130.806px, 1fr));
-    gap: 20px;
+    gap: 10px;
 }
 
 .widget {
